<resources>
    <string name="app_name">MyContacts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
    <string name="email">email</string>
    <string name="welcome_logged_in_user">Welcome %s</string>
</resources>